fix drawer icon spacing/styles

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -57,3 +57,8 @@ color-picker .hue-alpha.box .selected-color {
 color-picker .hue-alpha.box .right {
     padding-top: 0;
 }
+
+// mat component styles
+mat-sidenav {
+    width: 280px;
+}
